--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -64,6 +64,37 @@
     select:focus {
         @apply border-primary ring-0 outline-none;
     }
+
+    [type="checkbox"]:checked,
+    [type="radio"]:checked {
+        @apply border-primary ring-0 outline-1 outline-offset-2 ring-offset-primary-200 bg-primary-300;
+    }
+    [type="checkbox"]:active,
+    [type="radio"]:active {
+        @apply border-primary ring-0 outline-1 outline-offset-2 ring-offset-primary-200 bg-primary-300 ring-primary-btn;
+    }
+
+    [type="checkbox"]:focus,
+    [type="radio"]:focus {
+        @apply border-primary ring-0 outline-1 outline-offset-2 ring-offset-primary-200 bg-primary-300 ring-primary-btn;
+    }
+    [type="checkbox"],
+    [type="radio"] {
+        @apply text-primary-btn;
+    }
+
+    /*
+        type="checkbox"]:checked, [type="radio"]:checked {
+    --tw-border-opacity: 1;
+    border-color: rgb(255 130 67 / var(--tw-border-opacity));
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+    */
+
     .form-checkbox {
         @apply rounded;
     }
@@ -113,6 +144,14 @@
     }
     .btn-primary {
         @apply text-white border-solid border-2 bg-primary-btn border-primary-btn hover:bg-primary-700 rounded shadow-btn hover:-translate-y-1;
+    }
+
+    .btn-danger {
+        @apply text-white border-solid border-2 bg-red-500 border-red-500 hover:bg-red-600 rounded shadow-btn hover:-translate-y-1;
+    }
+
+    .btn-warning {
+        @apply text-white border-solid border-2 bg-yellow-500 border-yellow-500 hover:border-yellow-400 hover:bg-yellow-400 rounded shadow-btn hover:-translate-y-1;
     }
 
     .btn-secondary {
